<resources>
    <string name="app_name">Seu Financeiro</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action">Sair</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="create_account">Crie sua conta</string>
    <string name="save_account">Salvar</string>
    <string name="email">E-mail</string>
    <string name="name">Nome</string>
    <string name="reenter_password">Repita a senha</string>
    <string name="do_login">Já tem cadastro? Faça o login</string>
    <string name="month_1">Janeiro</string>
    <string name="month_2">Fevereiro</string>
    <string name="month_3">Março</string>
    <string name="month_4">Abril</string>
    <string name="month_5">Maio</string>
    <string name="month_6">Junho</string>
    <string name="month_7">Julho</string>
    <string name="month_8">Agosto</string>
    <string name="month_9">Setembro</string>
    <string name="month_10">Outubro</string>
    <string name="month_11">Novembro</string>
    <string name="month_12">Dezembro</string>
    <string name="show_modal">show_modal</string>
    <string name="novo">Nova Categoria</string>
    <string name="salvar">SALVAR</string>
    <string name="nome">nome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categorias">Categorias</string>
</resources>
