<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="false"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="80dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:text="@string/app_name" />

        </RelativeLayout>

        <include layout="@layout/form_account" />

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/do_login"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>